# python-w

projekt1/: pyproject.toml
projekt1/scripts/: main.py  text.txt  wiesiek.txt
projekt10/: main.py  pyproject.toml
projekt2/: pyproject.toml
projekt2/scripts/: main.py
projekt3/: main.py  pyproject.toml
projekt4/: main.py  pyproject.toml
projekt7/: main.py  pyproject.toml
projekt8/: Untitled-1.ipynb  pyproject.toml
