[tool.poetry]
name = "projekt1"
version = "0.1.0"
description = ""
authors = ["Jan Kośnic"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ascii-graph = "^1.5.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
