[tool.poetry]
name = "projekt10"
version = "0.1.0"
description = ""
authors = ["Jan Kosnic"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
bokeh = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
