[tool.poetry]
name = "projekt4"
version = "0.1.0"
description = ""
authors = ["Jan Kośnic"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.4"
numba = "^0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
