[tool.poetry]
name = "projekt8"
version = "0.1.0"
description = ""
authors = ["Jan Kośnic"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.13.3"
numpy = "^2.2.2"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
